更新图表功能